--- a/testModule/src/main/resources/templates/not_found.html
+++ b/testModule/src/main/resources/templates/not_found.html
@@ -34,33 +34,7 @@
 
 <div class="container">
     <div class="row py-2">
-        <div class="col-12">
-            <a class="btn btn-primary" href="/product/new">Add Product</a>
-        </div>
-
-        <div class="col-12">
-            <table class="table table-bordered my-2">
-                <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Cost</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="product : ${products}">
-                    <th scope="row" th:text="${product.id}">1</th>
-                    <td th:text="${product.title}">Alex</td>
-                    <td th:text="${product.cost}+'$'">0$</td>
-                    <td>
-                        <a class="btn btn-success" th:href="@{/{id}(id = ${product.id})}"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-danger"  th:href="@{/delete/{id}(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+        <p th:text="${message}">Error message</p>
     </div>
 </div>
 
@@ -75,5 +49,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
+
 </html>
