--- a/testModule/src/main/resources/templates/product.html
+++ b/testModule/src/main/resources/templates/product.html
@@ -35,25 +35,46 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form th:action="@{/user}" method="post" th:object="${user}">
-                <input th:field="*{id}" type="hidden" id="id" name="id" >
-                <div class="form-group">
-                    <label>Username</label>
-                    <input th:field="*{username}" type="text" class="form-control" id="name" name="username" placeholder="Enter username" >
-                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+            <a class="btn btn-primary" th:href="@{/product/new}">Add Product</a>
+        </div>
+
+        <div class="col-12 mt-3">
+            <form class="form-inline">
+                <div class="form-group mb-2 mr-2">
+                    <label for="minPriceFilter" class="sr-only">Min price</label>
+                    <input type="double" class="form-control" id="minPriceFilter"
+                           name="minPriceFilter" placeholder="Min filter">
+
+                    <label for="maxPriceFilter" class="sr-only">Max price</label>
+                    <input type="double" class="form-control" id="maxPriceFilter"
+                           name="maxPriceFilter" placeholder="Max filter">
                 </div>
-                <div class="form-group">
-                    <label>Email</label>
-                    <input th:field="*{email}" type="email" class="form-control" id="email" name="email" placeholder="Enter email" >
-                    <p class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input th:field="*{password}" type="password" class="form-control" id="password" name="password" placeholder="Enter password" >
-                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary mb-2">Apply</button>
             </form>
+        </div>
+
+        <div class="col-12">
+            <table class="table table-bordered my-2">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="product : ${products}">
+                    <th scope="row" th:text="${product.id}">1</th>
+                    <td th:text="${product.title}">Alex</td>
+                    <td th:text="${product.price}">some@mail.com</td>
+                    <td>
+                        <a class="btn btn-success" th:href="@{/product/{id}(id = ${product.id})}"><i class="fas fa-edit"></i></a>
+                        <a class="btn btn-danger" th:href="@{/product/delete/{id}(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
@@ -69,7 +90,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
 </body>
-
 </html>
