--- a/testModule/src/main/resources/templates/product_form.html
+++ b/testModule/src/main/resources/templates/product_form.html
@@ -35,43 +35,18 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <a class="btn btn-primary" th:href="@{/user/new}">Add User</a>
-        </div>
-
-        <div class="col-12 mt-3">
-            <form class="form-inline">
-                <div class="form-group mb-2 mr-2">
-                    <label for="usernameFilter" class="sr-only">Username filter</label>
-                    <input type="text" class="form-control" id="usernameFilter"
-                           name="usernameFilter" placeholder="Username filter">
+            <form th:action="@{/product}" method="post" th:object="${product}">
+                <input th:field="*{id}" type="hidden" id="id" name="id" >
+                <div class="form-group">
+                    <label>Title</label>
+                    <input th:field="*{title}" type="text" class="form-control" id="title" name="title" placeholder="Enter title" >
                 </div>
-
-                <button type="submit" class="btn btn-primary mb-2">Apply</button>
+                <div class="form-group">
+                    <label>Price</label>
+                    <input th:field="*{price}" type="text" class="form-control" id="price" name="price" placeholder="Enter price" >
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-        </div>
-
-        <div class="col-12">
-            <table class="table table-bordered my-2">
-                <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="user : ${users}">
-                    <th scope="row" th:text="${user.id}">1</th>
-                    <td th:text="${user.username}">Alex</td>
-                    <td th:text="${user.email}">some@mail.com</td>
-                    <td>
-                        <a class="btn btn-success" th:href="@{/user/{id}(id = ${user.id})}"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-danger" th:href="@{/user/delete/{id}(id = ${user.id})}"><i class="far fa-trash-alt"></i></a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
@@ -87,5 +62,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
+
 </html>
