--- a/testModule/src/main/resources/templates/product.html
+++ b/testModule/src/main/resources/templates/product.html
@@ -66,8 +66,8 @@
                 <tbody>
                 <tr th:each="product : ${products}">
                     <th scope="row" th:text="${product.id}">1</th>
-                    <td th:text="${product.title}">Alex</td>
-                    <td th:text="${product.price}">some@mail.com</td>
+                    <td th:text="${product.title}">Product</td>
+                    <td th:text="${product.price}">0</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/product/{id}(id = ${product.id})}"><i class="fas fa-edit"></i></a>
                         <a class="btn btn-danger" th:href="@{/product/delete/{id}(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>
@@ -76,6 +76,32 @@
                 </tbody>
             </table>
         </div>
+
+        <div th:unless="${products.isEmpty()}" class="col-12">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+
+                    <li class="page-item" th:classappend="${products.isFirst()} ? 'disabled'">
+                        <a class="page-link"
+                           th:href="@{/product(page=${products.number}, size=${products.size})}" href="#">Previous</a>
+                    </li>
+
+                    <li th:each="num : ${#numbers.sequence(1, products.totalPages)}"
+                        th:classappend="${num == products.number + 1} ? 'active'"
+                        class="page-item">
+                        <a class="page-link" th:href="@{/product(page=${num}, size=${products.size})}">[[${num}]]
+                            <span th:if="${num == products.number + 1}" class="sr-only">(current)</span>
+                        </a>
+                    </li>
+
+                    <li class="page-item" th:classappend="${products.isLast()} ? 'disabled'">
+                        <a class="page-link"
+                           th:href="@{/product(page=${products.number+2}, size=${products.size})}" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
     </div>
 </div>
 
