--- a/frontend/src/app/product-form/product-form.component.html
+++ b/frontend/src/app/product-form/product-form.component.html
@@ -1,13 +1,19 @@
 <div class="row py-2">
   <div class="col-12">
     <form action="#" method="post">
-      <input type="hidden" id="id" name="id">
+
       <div class="form-group">
         <label>Title</label>
-        <input type="text" class="form-control" id="text" name="title" placeholder="Enter title">
-        <label>Price</label>
-        <input type="text" class="form-control" id="double" name="Price" placeholder="Enter price">
+        <input [(ngModel)]="product.title" type="text" class="form-control" id="title" name="title"
+               placeholder="Enter title">
       </div>
+
+      <div class="form-group">
+        <label>Price</label>
+        <input [(ngModel)]="product.price" type="text" class="form-control" id="price" name="price"
+               placeholder="Enter price">
+      </div>
+
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
